# neutron-skeleton-extension

./: .coveragerc  .gitreview  CONTRIBUTING.rst  HACKING.rst  README.rst  setup.cfg
devstack/: plugin.sh  settings
doc/source/: conf.py  index.rst  installation.rst  usage.rst
neutron_skeleton_extension/: __init__.py  _i18n.py
neutron_skeleton_extension/cli/: skeleton_port.py  skeleton_router.py
neutron_skeleton_extension/common/: constants.py
neutron_skeleton_extension/extensions/: skeleton_port.py  skeleton_router.py
neutron_skeleton_extension/services/skeleton_port/: skeleton_port_plugin.py
neutron_skeleton_extension/services/skeleton_port/agent/extensions/: skeleton_port_agent_extension.py  skeleton_port_driver_base.py
neutron_skeleton_extension/services/skeleton_port/agent/extensions/linuxbridge/: skeleton_port_driver.py
neutron_skeleton_extension/services/skeleton_port/agent/extensions/mech_sriov/: skeleton_port_driver.py
neutron_skeleton_extension/services/skeleton_port/agent/extensions/openvswitch/: skeleton_port_driver.py
neutron_skeleton_extension/services/skeleton_port/common/: config.py
neutron_skeleton_extension/services/skeleton_router/: skeleton_router_plugin.py
neutron_skeleton_extension/services/skeleton_router/agent/l3reference/: skeleton_router_agent_extension.py
neutron_skeleton_extension/tests/: test_networking_l2_l3_ext.py
releasenotes/source/: conf.py  index.rst
