[metadata]
name = neutron-skeleton-extension
summary = Neutron Skeleton Extension demonstrates how to leverage a L2 or L3 extension.
description-file = README.rst
author = OpenStack
author-email = openstack-dev@lists.openstack.org
home-page = http://www.openstack.org/
classifier =
    Environment :: OpenStack
    Intended Audience :: Information Technology
    Intended Audience :: System Administrators
    License :: OSI Approved :: Apache Software License
    Operating System :: POSIX :: Linux
    Programming Language :: Python
    Programming Language :: Python :: 2
    Programming Language :: Python :: 2.7
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.3
    Programming Language :: Python :: 3.4
    Programming Language :: Python :: 3.5

[files]
packages =
    neutron_skeleton_extension

[entry_points]
neutronclient.extension=
    skeleton_port = neutron_skeleton_extension.cli.skeleton_port
    skeleton_router = neutron_skeleton_extension.cli.skeleton_router
neutron.service_plugins = 
    skeleton_port = neutron_skeleton_extension.services.skeleton_port.skeleton_port_plugin:SkeletonPortPlugin
    skeleton_router = neutron_skeleton_extension.services.skeleton_router.skeleton_router_plugin:SkeletonRouterPlugin
neutron.agent.l2.extensions = 
    skeleton_port = neutron_skeleton_extension.services.skeleton_port.agent.extensions.skeleton_port_agent_extension:SkeletonPortAgentExtension
neutron.agent.l3.extensions =
    skeleton_router = neutron_skeleton_extension.services.skeleton_router.agent.l3reference.skeleton_router_agent_extension:SkeletonRouterAgentExtension
neutron_skeleton_extension.skeleton_port.drivers =
    ovs = neutron_skeleton_extension.services.skeleton_port.agent.extensions.openvswitch.skeleton_port_driver:SkeletonPortOvsDriver
    linuxbridge = neutron_skeleton_extension.services.skeleton_port.agent.extensions.linuxbridge.skeleton_port_driver:SkeletonPortLBDriver
    sriov = neutron_skeleton_extension.services.skeleton_port.agent.extensions.mech_sriov.skeleton_port_driver:SkeletonPortSriovDriver
oslo.config.opts =
    skeleton_port = neutron_skeleton_extension.opts:list_l2_ext_opts
    skeleton_router = neutron_skeleton_extension.opts:list_l3_ext_opts



[build_sphinx]
source-dir = doc/source
build-dir = doc/build
all_files = 1

[upload_sphinx]
upload-dir = doc/build/html

[compile_catalog]
directory = neutron_skeleton_extension/locale
domain = neutron_skeleton_extension

[update_catalog]
domain = neutron_skeleton_extension
output_dir = neutron_skeleton_extension/locale
input_file = neutron_skeleton_extension/locale/neutron_skeleton_extension.pot

[extract_messages]
keywords = _ gettext ngettext l_ lazy_gettext
mapping_file = babel.cfg
output_file = neutron_skeleton_extension/locale/neutron_skeleton_extension.pot

[build_releasenotes]
all_files = 1
build-dir = releasenotes/build
source-dir = releasenotes/source
